force-app/main/default/objects/RDO__c/RDO__c.object-meta.xml
<CustomObject>
    <label>RDO</label>
    <nameField>
        <label>Num RDO</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>