force-app/main/default/objects/RDO__c/fields/ActualVolumeFSO__c.field-meta.xml
<CustomField>
    <fullName>ActualVolumeFSO__c</fullName>
    <label>Actual Volume (FSO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>