force-app/main/default/objects/RDO__c/fields/AvailabilityREF102End__c.field-meta.xml
<CustomField>
    <fullName>AvailabilityREF102End__c</fullName>
    <description>Availability - REF 102 - End</description>
    <inlineHelpText>Availability - REF 102 - End</inlineHelpText>
    <label>End</label>
    <type>Time</type>
</CustomField>