force-app/main/default/objects/RDO__c/fields/AvailabilityREF102Start__c.field-meta.xml
<CustomField>
    <fullName>AvailabilityREF102Start__c</fullName>
    <description>Availability - REF 102 - Start</description>
    <label>Start</label>
    <type>Time</type>
</CustomField>