force-app/main/default/objects/RDO__c/fields/BOM__c.field-meta.xml
<CustomField>
    <fullName>BOM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BOM</label>
    <referenceTo>BOM__c</referenceTo>
    <relationshipLabel>RDOs</relationshipLabel>
    <relationshipName>BOMs</relationshipName>
    <type>Lookup</type>
</CustomField>