force-app/main/default/objects/RDO__c/fields/BurningCO2ContrVolume__c.field-meta.xml
<CustomField>
    <fullName>BurningCO2ContrVolume__c</fullName>
    <label>Contractor’s Responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>