force-app/main/default/objects/RDO__c/fields/BurningGasContrVolume__c.field-meta.xml
<CustomField>
    <fullName>BurningGasContrVolume__c</fullName>
    <label>Contractor’s Responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>