force-app/main/default/objects/RDO__c/fields/BurningGasPetrVolume__c.field-meta.xml
<CustomField>
    <fullName>BurningGasPetrVolume__c</fullName>
    <label>Client’s Responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>