force-app/main/default/objects/RDO__c/fields/CharterContract__c.field-meta.xml
<CustomField>
    <fullName>CharterContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charter Contract</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>VesselContract__c.Vessel__c</field>
            <operation>equals</operation>
            <valueField>$Source.Vessel__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>VesselContract__c</referenceTo>
    <relationshipLabel>RDOs</relationshipLabel>
    <relationshipName>RDOs</relationshipName>
    <type>Lookup</type>
</CustomField>