force-app/main/default/objects/RDO__c/fields/ContractualVolume__c.field-meta.xml
<CustomField>
    <fullName>ContractualVolume__c</fullName>
    <label>Contractual Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>