force-app/main/default/objects/RDO__c/fields/DailyRateServices__c.field-meta.xml
<CustomField>
    <fullName>DailyRateServices__c</fullName>
    <label>Daily Rate (Services)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>