force-app/main/default/objects/RDO__c/fields/DeltaCharter__c.field-meta.xml
<CustomField>
    <fullName>DeltaCharter__c</fullName>
    <formula>1 - (ActualVolumeFSO__c / ContractualVolume__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta (Charter)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>