force-app/main/default/objects/RDO__c/fields/DeltaServices__c.field-meta.xml
<CustomField>
    <fullName>DeltaServices__c</fullName>
    <formula>(ContractualVolume__c - ActualVolumeFSO__c - Tank1Value__c - Tank2Value__c) / (ContractualVolume__c - Tank1Value__c - Tank2Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta (Services)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>