force-app/main/default/objects/RDO__c/fields/DieselConsumCtrlContrConsumed__c.field-meta.xml
<CustomField>
    <fullName>DieselConsumCtrlContrConsumed__c</fullName>
    <label>Consumed.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>