force-app/main/default/objects/RDO__c/fields/DieselConsumCtrlContrInitialInventory__c.field-meta.xml
<CustomField>
    <fullName>DieselConsumCtrlContrInitialInventory__c</fullName>
    <label>Initial Inventory</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>