force-app/main/default/objects/RDO__c/fields/DieselConsumCtrlContrTransPContracted__c.field-meta.xml
<CustomField>
    <fullName>DieselConsumCtrlContrTransPContracted__c</fullName>
    <label>Transferred to Client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>