force-app/main/default/objects/RDO__c/fields/DieselConsumCtrlPetrConsumed__c.field-meta.xml
<CustomField>
    <fullName>DieselConsumCtrlPetrConsumed__c</fullName>
    <label>Consumed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>