force-app/main/default/objects/RDO__c/fields/DieselConsumCtrlPetrFinalInventory__c.field-meta.xml
<CustomField>
    <fullName>DieselConsumCtrlPetrFinalInventory__c</fullName>
    <label>Final Inventory</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>