force-app/main/default/objects/RDO__c/fields/DieselConsumCtrlPetrInitialInventory__c.field-meta.xml
<CustomField>
    <fullName>DieselConsumCtrlPetrInitialInventory__c</fullName>
    <label>Initial Inventory</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>