force-app/main/default/objects/RDO__c/fields/DieselConsumCtrlPetrReceived__c.field-meta.xml
<CustomField>
    <fullName>DieselConsumCtrlPetrReceived__c</fullName>
    <label>Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>