force-app/main/default/objects/RDO__c/fields/DieselConsumCtrlPetrTransPContracted__c.field-meta.xml
<CustomField>
    <fullName>DieselConsumCtrlPetrTransPContracted__c</fullName>
    <label>Transferred to Contractor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>