force-app/main/default/objects/RDO__c/fields/DieselConsumCtrlTotalTransPContracted__c.field-meta.xml
<CustomField>
    <fullName>DieselConsumCtrlTotalTransPContracted__c</fullName>
    <label>Transferred to Contractor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>