force-app/main/default/objects/RDO__c/fields/ExemptionPayment1stAddTime__c.field-meta.xml
<CustomField>
    <fullName>ExemptionPayment1stAddTime__c</fullName>
    <description>Exemption from payment 1st Add Time</description>
    <inlineHelpText>Exemption from payment 1st Add Time</inlineHelpText>
    <label>Add Time</label>
    <type>Time</type>
</CustomField>