force-app/main/default/objects/RDO__c/fields/ExemptionPayment1stEnd__c.field-meta.xml
<CustomField>
    <fullName>ExemptionPayment1stEnd__c</fullName>
    <description>Exemption from payment 1st End</description>
    <inlineHelpText>Exemption from payment 1st End</inlineHelpText>
    <label>End</label>
    <type>Time</type>
</CustomField>