force-app/main/default/objects/RDO__c/fields/ExemptionPayment1stStart__c.field-meta.xml
<CustomField>
    <fullName>ExemptionPayment1stStart__c</fullName>
    <description>Exemption from payment 1st Start</description>
    <inlineHelpText>Exemption from payment 1st Start</inlineHelpText>
    <label>Start</label>
    <type>Time</type>
</CustomField>