force-app/main/default/objects/RDO__c/fields/ExemptionPayment2ndAddTime__c.field-meta.xml
<CustomField>
    <fullName>ExemptionPayment2ndAddTime__c</fullName>
    <description>Exemption from payment 2nd Add Time</description>
    <inlineHelpText>Exemption from payment 2nd Add Time</inlineHelpText>
    <label>Add Time</label>
    <type>Time</type>
</CustomField>