force-app/main/default/objects/RDO__c/fields/ExemptionPayment2ndEnd__c.field-meta.xml
<CustomField>
    <fullName>ExemptionPayment2ndEnd__c</fullName>
    <description>Exemption from payment 2nd End</description>
    <inlineHelpText>Exemption from payment 2nd End</inlineHelpText>
    <label>End</label>
    <type>Time</type>
</CustomField>