force-app/main/default/objects/RDO__c/fields/ExemptionPayment2ndStart__c.field-meta.xml
<CustomField>
    <fullName>ExemptionPayment2ndStart__c</fullName>
    <description>Exemption from payment 2nd Start</description>
    <inlineHelpText>Exemption from payment 2nd Start</inlineHelpText>
    <label>Start</label>
    <type>Time</type>
</CustomField>