force-app/main/default/objects/RDO__c/fields/ExemptionPayment3rdAddTime__c.field-meta.xml
<CustomField>
    <fullName>ExemptionPayment3rdAddTime__c</fullName>
    <description>Exemption from payment 3rd Add Time</description>
    <inlineHelpText>Exemption from payment 3rd Add Time</inlineHelpText>
    <label>Add Time</label>
    <type>Time</type>
</CustomField>