force-app/main/default/objects/RDO__c/fields/ExemptionPayment3rdEnd__c.field-meta.xml
<CustomField>
    <fullName>ExemptionPayment3rdEnd__c</fullName>
    <description>Exemption from payment 3rd End</description>
    <inlineHelpText>Exemption from payment 3rd End</inlineHelpText>
    <label>End</label>
    <type>Time</type>
</CustomField>