force-app/main/default/objects/RDO__c/fields/ExemptionPayment3rdStart__c.field-meta.xml
<CustomField>
    <fullName>ExemptionPayment3rdStart__c</fullName>
    <description>Exemption from payment 3rd Start</description>
    <inlineHelpText>Exemption from payment 3rd Start</inlineHelpText>
    <label>Start</label>
    <type>Time</type>
</CustomField>