force-app/main/default/objects/RDO__c/fields/ExemptionPayment4thAddTime__c.field-meta.xml
<CustomField>
    <fullName>ExemptionPayment4thAddTime__c</fullName>
    <description>Exemption from payment 4th Add Time</description>
    <inlineHelpText>Exemption from payment 4th Add Time</inlineHelpText>
    <label>Add Time</label>
    <type>Time</type>
</CustomField>