force-app/main/default/objects/RDO__c/fields/ExemptionPayment4thEnd__c.field-meta.xml
<CustomField>
    <fullName>ExemptionPayment4thEnd__c</fullName>
    <description>Exemption from payment 4th End</description>
    <inlineHelpText>Exemption from payment 4th End</inlineHelpText>
    <label>End</label>
    <type>Time</type>
</CustomField>