force-app/main/default/objects/RDO__c/fields/ExemptionPayment4thStart__c.field-meta.xml
<CustomField>
    <fullName>ExemptionPayment4thStart__c</fullName>
    <description>Exemption from payment 4th Start</description>
    <inlineHelpText>Exemption from payment 4th Start</inlineHelpText>
    <label>Start</label>
    <type>Time</type>
</CustomField>