force-app/main/default/objects/RDO__c/fields/LimitDate__c.field-meta.xml
<CustomField>
    <fullName>LimitDate__c</fullName>
    <formula>IF(WaterInjectionUninjectedVolume__c &gt; 0, ADDMONTHS(Date__c,3) - 1, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limit Date</label>
    <type>Date</type>
</CustomField>