force-app/main/default/objects/RDO__c/fields/LocalContentFixedPob__c.field-meta.xml
<CustomField>
    <fullName>LocalContentFixedPob__c</fullName>
    <label>Fixed POB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>