force-app/main/default/objects/RDO__c/fields/LocalContentNationalPob__c.field-meta.xml
<CustomField>
    <fullName>LocalContentNationalPob__c</fullName>
    <label>National POB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>