force-app/main/default/objects/RDO__c/fields/LocalContentPercentNational__c.field-meta.xml
<CustomField>
    <fullName>LocalContentPercentNational__c</fullName>
    <label>National Rate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>