force-app/main/default/objects/RDO__c/fields/LocalContentPetr__c.field-meta.xml
<CustomField>
    <fullName>LocalContentPetr__c</fullName>
    <label>Client</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>