force-app/main/default/objects/RDO__c/fields/LocalContentPetrCont__c.field-meta.xml
<CustomField>
    <fullName>LocalContentPetrCont__c</fullName>
    <label>Diving Team</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>