force-app/main/default/objects/RDO__c/fields/LocalContentTotalPob__c.field-meta.xml
<CustomField>
    <fullName>LocalContentTotalPob__c</fullName>
    <label>Total POB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>