force-app/main/default/objects/RDO__c/fields/N__c.field-meta.xml
<CustomField>
    <fullName>N__c</fullName>
    <formula>BOM__r.TotalReductionByIUGA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>