force-app/main/default/objects/RDO__c/fields/NaturalGasExported__c.field-meta.xml
<CustomField>
    <fullName>NaturalGasExported__c</fullName>
    <label>Exported/Imported Gas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>