force-app/main/default/objects/RDO__c/fields/NaturalGasFuel__c.field-meta.xml
<CustomField>
    <fullName>NaturalGasFuel__c</fullName>
    <label>Fuel Gas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>