force-app/main/default/objects/RDO__c/fields/NaturalGasHPFlareBurn__c.field-meta.xml
<CustomField>
    <fullName>NaturalGasHPFlareBurn__c</fullName>
    <label>HP Flare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>