force-app/main/default/objects/RDO__c/fields/NaturalGasInjection__c.field-meta.xml
<CustomField>
    <fullName>NaturalGasInjection__c</fullName>
    <label>Injection</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>