force-app/main/default/objects/RDO__c/fields/NaturalGasLPFlareBurn__c.field-meta.xml
<CustomField>
    <fullName>NaturalGasLPFlareBurn__c</fullName>
    <label>LP Flare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>