force-app/main/default/objects/RDO__c/fields/NaturalGasProduced__c.field-meta.xml
<CustomField>
    <fullName>NaturalGasProduced__c</fullName>
    <label>Produced Gas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>