force-app/main/default/objects/RDO__c/fields/OffloadingDelayTime__c.field-meta.xml
<CustomField>
    <fullName>OffloadingDelayTime__c</fullName>
    <description>Offloading delay - Time</description>
    <inlineHelpText>Offloading delay - Time</inlineHelpText>
    <label>Time</label>
    <type>Time</type>
</CustomField>