force-app/main/default/objects/RDO__c/fields/OffloadingReduction__c.field-meta.xml
<CustomField>
    <fullName>OffloadingReduction__c</fullName>
    <label>Offloading Reduction</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>