force-app/main/default/objects/RDO__c/fields/OilReduction22221stAddTime__c.field-meta.xml
<CustomField>
    <fullName>OilReduction22221stAddTime__c</fullName>
    <description>Oil Reduction (2.2.2.2) - 1st Add Time</description>
    <inlineHelpText>Oil Reduction (2.2.2.2) - 1st Add Time</inlineHelpText>
    <label>Add Time</label>
    <type>Time</type>
</CustomField>