force-app/main/default/objects/RDO__c/fields/OilReduction22221stEnd__c.field-meta.xml
<CustomField>
    <fullName>OilReduction22221stEnd__c</fullName>
    <description>Oil Reduction (2.2.2.2) - 1st End</description>
    <inlineHelpText>Oil Reduction (2.2.2.2) - 1st End</inlineHelpText>
    <label>End</label>
    <type>Time</type>
</CustomField>