force-app/main/default/objects/RDO__c/fields/OilReduction22221stStart__c.field-meta.xml
<CustomField>
    <fullName>OilReduction22221stStart__c</fullName>
    <description>Oil Reduction (2.2.2.2) - 1st Start</description>
    <inlineHelpText>Oil Reduction (2.2.2.2) - 1st Start</inlineHelpText>
    <label>Start</label>
    <type>Time</type>
</CustomField>