force-app/main/default/objects/RDO__c/fields/OilReduction22222ndAddTime__c.field-meta.xml
<CustomField>
    <fullName>OilReduction22222ndAddTime__c</fullName>
    <description>Oil Reduction (2.2.2.2) - 2nd Add Time</description>
    <inlineHelpText>Oil Reduction (2.2.2.2) - 2nd Add Time</inlineHelpText>
    <label>Add Time</label>
    <type>Time</type>
</CustomField>