force-app/main/default/objects/RDO__c/fields/OilReduction22222ndEnd__c.field-meta.xml
<CustomField>
    <fullName>OilReduction22222ndEnd__c</fullName>
    <description>Oil Reduction (2.2.2.2) - 2nd End</description>
    <inlineHelpText>Oil Reduction (2.2.2.2) - 2nd End</inlineHelpText>
    <label>End</label>
    <type>Time</type>
</CustomField>