force-app/main/default/objects/RDO__c/fields/OilReduction22222ndStart__c.field-meta.xml
<CustomField>
    <fullName>OilReduction22222ndStart__c</fullName>
    <description>Oil Reduction (2.2.2.2) - 2nd Start</description>
    <inlineHelpText>Oil Reduction (2.2.2.2) - 2nd Start</inlineHelpText>
    <label>Start</label>
    <type>Time</type>
</CustomField>