force-app/main/default/objects/RDO__c/fields/OilReduction22223rdEnd__c.field-meta.xml
<CustomField>
    <fullName>OilReduction22223rdEnd__c</fullName>
    <description>Oil Reduction (2.2.2.2) - 3rd End</description>
    <inlineHelpText>Oil Reduction (2.2.2.2) - 3rd End</inlineHelpText>
    <label>End</label>
    <type>Time</type>
</CustomField>