force-app/main/default/objects/RDO__c/fields/OilReduction22223rdStart__c.field-meta.xml
<CustomField>
    <fullName>OilReduction22223rdStart__c</fullName>
    <description>Oil Reduction (2.2.2.2) - 3rd Start</description>
    <inlineHelpText>Oil Reduction (2.2.2.2) - 3rd Start</inlineHelpText>
    <label>Start</label>
    <type>Time</type>
</CustomField>