force-app/main/default/objects/RDO__c/fields/OilReduction22224thAddTime__c.field-meta.xml
<CustomField>
    <fullName>OilReduction22224thAddTime__c</fullName>
    <description>Oil Reduction (2.2.2.2) - 4th Add Time</description>
    <inlineHelpText>Oil Reduction (2.2.2.2) - 4th Add Time</inlineHelpText>
    <label>Add Time</label>
    <type>Time</type>
</CustomField>