force-app/main/default/objects/RDO__c/fields/OilReduction22224thEnd__c.field-meta.xml
<CustomField>
    <fullName>OilReduction22224thEnd__c</fullName>
    <description>Oil Reduction (2.2.2.2) - 4th End</description>
    <inlineHelpText>Oil Reduction (2.2.2.2) - 4th End</inlineHelpText>
    <label>End</label>
    <type>Time</type>
</CustomField>