force-app/main/default/objects/RDO__c/fields/OilReduction22224thStart__c.field-meta.xml
<CustomField>
    <fullName>OilReduction22224thStart__c</fullName>
    <description>Oil Reduction (2.2.2.2) - 4th Start</description>
    <inlineHelpText>Oil Reduction (2.2.2.2) - 4th Start</inlineHelpText>
    <label>Start</label>
    <type>Time</type>
</CustomField>