force-app/main/default/objects/RDO__c/fields/OilReduction23111stAddTime__c.field-meta.xml
<CustomField>
    <fullName>OilReduction23111stAddTime__c</fullName>
    <label>Add Time</label>
    <type>Time</type>
</CustomField>