force-app/main/default/objects/RDO__c/fields/OilReduction23111stEnd__c.field-meta.xml
<CustomField>
    <fullName>OilReduction23111stEnd__c</fullName>
    <description>Oil Reduction (2.3.1.1) - 1st End</description>
    <inlineHelpText>Oil Reduction (2.3.1.1) - 1st End</inlineHelpText>
    <label>End</label>
    <type>Time</type>
</CustomField>