force-app/main/default/objects/RDO__c/fields/OilReduction23111stStart__c.field-meta.xml
<CustomField>
    <fullName>OilReduction23111stStart__c</fullName>
    <description>Oil Reduction (2.3.1.1) - 1st Start</description>
    <inlineHelpText>Oil Reduction (2.3.1.1) - 1st Start</inlineHelpText>
    <label>Start</label>
    <type>Time</type>
</CustomField>