force-app/main/default/objects/RDO__c/fields/OilReduction23112ndAddTime__c.field-meta.xml
<CustomField>
    <fullName>OilReduction23112ndAddTime__c</fullName>
    <description>Oil Reduction (2.3.1.1) - 2nd Add Time</description>
    <inlineHelpText>Oil Reduction (2.3.1.1) - 2nd Add Time</inlineHelpText>
    <label>Add Time</label>
    <type>Time</type>
</CustomField>