force-app/main/default/objects/RDO__c/fields/OilReduction23112ndEnd__c.field-meta.xml
<CustomField>
    <fullName>OilReduction23112ndEnd__c</fullName>
    <description>Oil Reduction (2.3.1.1) - 2nd End</description>
    <inlineHelpText>Oil Reduction (2.3.1.1) - 2nd End</inlineHelpText>
    <label>End</label>
    <type>Time</type>
</CustomField>