force-app/main/default/objects/RDO__c/fields/OilReduction23112ndStart__c.field-meta.xml
<CustomField>
    <fullName>OilReduction23112ndStart__c</fullName>
    <description>Oil Reduction (2.3.1.1) - 2nd Start</description>
    <inlineHelpText>Oil Reduction (2.3.1.1) - 2nd Start</inlineHelpText>
    <label>Start</label>
    <type>Time</type>
</CustomField>