force-app/main/default/objects/RDO__c/fields/OilReduction23113rdAddTime__c.field-meta.xml
<CustomField>
    <fullName>OilReduction23113rdAddTime__c</fullName>
    <description>Oil Reduction (2.3.1.1) - 3rd Add Time</description>
    <inlineHelpText>Oil Reduction (2.3.1.1) - 3rd Add Time</inlineHelpText>
    <label>Add Time</label>
    <type>Time</type>
</CustomField>