force-app/main/default/objects/RDO__c/fields/OilReduction23113rdEnd__c.field-meta.xml
<CustomField>
    <fullName>OilReduction23113rdEnd__c</fullName>
    <description>Oil Reduction (2.3.1.1) - 3rd End</description>
    <inlineHelpText>Oil Reduction (2.3.1.1) - 3rd End</inlineHelpText>
    <label>End</label>
    <type>Time</type>
</CustomField>