force-app/main/default/objects/RDO__c/fields/OilReduction23113rdStart__c.field-meta.xml
<CustomField>
    <fullName>OilReduction23113rdStart__c</fullName>
    <description>Oil Reduction (2.3.1.1) - 3rd Start</description>
    <inlineHelpText>Oil Reduction (2.3.1.1) - 3rd Start</inlineHelpText>
    <label>Start</label>
    <type>Time</type>
</CustomField>