force-app/main/default/objects/RDO__c/fields/OilReduction23114thAddTime__c.field-meta.xml
<CustomField>
    <fullName>OilReduction23114thAddTime__c</fullName>
    <description>Oil Reduction (2.3.1.1) - 4th Add Time</description>
    <inlineHelpText>Oil Reduction (2.3.1.1) - 4th Add Time</inlineHelpText>
    <label>Add Time</label>
    <type>Time</type>
</CustomField>