force-app/main/default/objects/RDO__c/fields/OilReduction23114thEnd__c.field-meta.xml
<CustomField>
    <fullName>OilReduction23114thEnd__c</fullName>
    <description>Oil Reduction (2.3.1.1) - 4th End</description>
    <inlineHelpText>Oil Reduction (2.3.1.1) - 4th End</inlineHelpText>
    <label>End</label>
    <type>Time</type>
</CustomField>