force-app/main/default/objects/RDO__c/fields/OilReduction23114thStart__c.field-meta.xml
<CustomField>
    <fullName>OilReduction23114thStart__c</fullName>
    <description>Oil Reduction (2.3.1.1) - 4th Start</description>
    <inlineHelpText>Oil Reduction (2.3.1.1) - 4th Start</inlineHelpText>
    <label>Start</label>
    <type>Time</type>
</CustomField>