force-app/main/default/objects/RDO__c/fields/Prioritization__c.field-meta.xml
<CustomField>
    <fullName>Prioritization__c</fullName>
    <label>Prioritization</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>