force-app/main/default/objects/RDO__c/fields/RateDeltaDaily__c.field-meta.xml
<CustomField>
    <fullName>RateDeltaDaily__c</fullName>
    <label>Daily Rate (Charter)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>