force-app/main/default/objects/RDO__c/fields/RateDeltaTotalReductions__c.field-meta.xml
<CustomField>
    <fullName>RateDeltaTotalReductions__c</fullName>
    <description>Total Reductions</description>
    <inlineHelpText>Total Reductions</inlineHelpText>
    <label>Total Reductions</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>