force-app/main/default/objects/RDO__c/fields/RateReductionDeltaDaily__c.field-meta.xml
<CustomField>
    <fullName>RateReductionDeltaDaily__c</fullName>
    <formula>(1 - RateDeltaDaily__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Reduction (Charter)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>