force-app/main/default/objects/RDO__c/fields/RateReductionDeltaExpectedVolume24__c.field-meta.xml
<CustomField>
    <fullName>RateReductionDeltaExpectedVolume24__c</fullName>
    <label>Estimated Volume (24h)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>