force-app/main/default/objects/RDO__c/fields/RateReductionDeltaExpectedVolume__c.field-meta.xml
<CustomField>
    <fullName>RateReductionDeltaExpectedVolume__c</fullName>
    <label>Expected Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>