force-app/main/default/objects/RDO__c/fields/RateReductionDeltaK__c.field-meta.xml
<CustomField>
    <fullName>RateReductionDeltaK__c</fullName>
    <label>K</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>