force-app/main/default/objects/RDO__c/fields/RateReductionDeltaMeasuredVolume__c.field-meta.xml
<CustomField>
    <fullName>RateReductionDeltaMeasuredVolume__c</fullName>
    <label>Actual Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>