force-app/main/default/objects/RDO__c/fields/RateReductionDeltaPercent__c.field-meta.xml
<CustomField>
    <fullName>RateReductionDeltaPercent__c</fullName>
    <label>Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>