force-app/main/default/objects/RDO__c/fields/RateReductionDeltaWells__c.field-meta.xml
<CustomField>
    <fullName>RateReductionDeltaWells__c</fullName>
    <label>Wells</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>