force-app/main/default/objects/RDO__c/fields/RateReductionServices__c.field-meta.xml
<CustomField>
    <fullName>RateReductionServices__c</fullName>
    <formula>1 -  DailyRateServices__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Reduction (Services)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>