force-app/main/default/objects/RDO__c/fields/RateReductionServicesOld__c.field-meta.xml
<CustomField>
    <fullName>RateReductionServicesOld__c</fullName>
    <label>Rate Reduction (Services)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>