force-app/main/default/objects/RDO__c/fields/ServicesContract__c.field-meta.xml
<CustomField>
    <fullName>ServicesContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Services Contract</label>
    <referenceTo>VesselContract__c</referenceTo>
    <relationshipLabel>RDOs (Services Contract)</relationshipLabel>
    <relationshipName>RDOs1</relationshipName>
    <type>Lookup</type>
</CustomField>