force-app/main/default/objects/RDO__c/fields/Tank1Value__c.field-meta.xml
<CustomField>
    <fullName>Tank1Value__c</fullName>
    <label>Tank 1 Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>