force-app/main/default/objects/RDO__c/fields/Tank2Value__c.field-meta.xml
<CustomField>
    <fullName>Tank2Value__c</fullName>
    <label>Tank 2 Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>