force-app/main/default/objects/RDO__c/fields/timeFormulaSRU__c.field-meta.xml
<CustomField>
    <fullName>timeFormulaSRU__c</fullName>
    <formula>IF( ISNULL(WaterInjectionTimeCleanSRU__c),
&quot;00:00&quot;,

IF( TEXT(WaterInjectionTimeCleanSRU__c) = &quot;00:00:00.000&quot;,
&quot;24:00&quot;,

IF(LEN(TEXT(HOUR(WaterInjectionTimeCleanSRU__c))) = 1,
&quot;0&quot;+TEXT(HOUR(WaterInjectionTimeCleanSRU__c)),

TEXT(HOUR(WaterInjectionTimeCleanSRU__c)))
+&quot;:&quot;+

IF(LEN(TEXT(MINUTE(WaterInjectionTimeCleanSRU__c))) = 1,
&quot;0&quot;+TEXT(MINUTE(WaterInjectionTimeCleanSRU__c)),

TEXT(MINUTE(WaterInjectionTimeCleanSRU__c)))
)
)+&quot;:00&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time of Cleaning SRU</label>
    <type>Text</type>
</CustomField>