force-app/main/default/objects/RDO__c/fields/timeFrmPartialStop__c.field-meta.xml
<CustomField>
    <fullName>timeFrmPartialStop__c</fullName>
    <formula>IF( ISNULL(WaterInjectionTimeParcialStop__c),
&quot;00:00&quot;,

IF( TEXT(WaterInjectionTimeParcialStop__c) = &quot;00:00:00.000&quot;,
&quot;24:00&quot;,

IF(LEN(TEXT(HOUR(WaterInjectionTimeParcialStop__c))) = 1,
&quot;0&quot;+TEXT(HOUR(WaterInjectionTimeParcialStop__c)),

TEXT(HOUR(WaterInjectionTimeParcialStop__c)))
+&quot;:&quot;+

IF(LEN(TEXT(MINUTE(WaterInjectionTimeParcialStop__c))) = 1,
&quot;0&quot;+TEXT(MINUTE(WaterInjectionTimeParcialStop__c)),

TEXT(MINUTE(WaterInjectionTimeParcialStop__c)))
)
)+&quot;:00&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time of Partial Stop</label>
    <type>Text</type>
</CustomField>