force-app/main/default/objects/RDO__c/fields/timeFrmTotalStop__c.field-meta.xml
<CustomField>
    <fullName>timeFrmTotalStop__c</fullName>
    <formula>IF( ISNULL(WaterInjectionTimeTotalStop__c),
&quot;00:00&quot;,

IF( TEXT(WaterInjectionTimeTotalStop__c) = &quot;00:00:00.000&quot;,
&quot;24:00&quot;,

IF(LEN(TEXT(HOUR(WaterInjectionTimeTotalStop__c))) = 1,
&quot;0&quot;+TEXT(HOUR(WaterInjectionTimeTotalStop__c)),

TEXT(HOUR(WaterInjectionTimeTotalStop__c)))
+&quot;:&quot;+

IF(LEN(TEXT(MINUTE(WaterInjectionTimeTotalStop__c))) = 1,
&quot;0&quot;+TEXT(MINUTE(WaterInjectionTimeTotalStop__c)),

TEXT(MINUTE(WaterInjectionTimeTotalStop__c)))
)
)+&quot;:00&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time of Total Stop</label>
    <type>Text</type>
</CustomField>