force-app/main/default/objects/RDO__c/fields/TotalActualUninjected__c.field-meta.xml
<CustomField>
    <fullName>TotalActualUninjected__c</fullName>
    <formula>WaterInjectionDailyQuota__c -  WITotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Actual Uninjected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>