force-app/main/default/objects/RDO__c/fields/TotalCO2Flare__c.field-meta.xml
<CustomField>
    <fullName>TotalCO2Flare__c</fullName>
    <formula>BurningCO2PetrVolume__c + BurningCO2ContrVolume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total CO2 Flare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>